endpoint added to swagger
