# src/Components/User/Router/index.js
@@ -1,16 +1,20 @@
 const UserController = require('../Controller');
+const UserDataValidation = require('../Validator');
 
 module.exports = class UserRoutes {
   constructor() {
-    this.UserController = new UserController();
+    this.userController = new UserController();
+    this.userDataValidation = new UserDataValidation();
   }
 
   // Router
   routes(app) {
-    app.route('/login').post(this.UserController.login);
+    app
+      .route('/login')
+      .post(this.userDataValidation.toCheckEmail, this.userController.login);
 
-    app.route('/user/id/:userId').get();
+    app.route('/id/:userId').get();
 
-    app.route('/user/name/:userName').get();
+    app.route('/name/:userName').get();
   }
 };
